Fix logo issue on iphone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1172,7 +1172,9 @@ textarea {
         margin: 0 !important;
     }
     .logo {
-        height: 40px;
+        height: 2.5em;
+        width: 50%;
+        margin: auto;
     }
     .profile-img>img {
         height: 150px;
@@ -1239,7 +1241,7 @@ textarea {
         flex-wrap: nowrap !important;
     }
     .logo {
-        height: 35px;
+        height: 2 em;
     }
     
     /* skill section */
